Mejora de estilos LESS

--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -90,11 +90,15 @@ html,
 
     #linesfooter{
     	height: 18px;
-    background-image: url(../resources/img/linesfooter.png);
+    background-image: url(../img/linesfooter.png);
     }
 
 
     #linesheader{
     	height: 9px;
-    background-image: url(../resources/img/linesheader.png);
+    background-image: url(../img/linesheader.png);
+    }
+
+    .well{
+    	background-color: #ececec;
     }
